@@ -56,4 +56,7 @@ Note that the following bug and feature requests are logged in GForge with relat
  ** Added tests and support for ACL operations across federated zones to support idrop interface operations
  *  [#714] add support for extended permissions set
  ** added extended permission types to FilePermissionEnum (work in progress - add support for files/collection acl setting)
- * [#723] add ireg support in jargon 
+ * [#723] add ireg support in jargon via IRODSRegistrationOfFilesAO
+ * [#5] GenQuery Enhancements
+ ** adding a new query builder model for more efficient and expressive gen query statements (work in progress)
+ 
